// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppNew basic 1`] = `<div />`;

exports[`Storyshots AppOld basic 1`] = `<div />`;

exports[`Storyshots Avatar anonymous 1`] = `
<div
  className="MuiAvatar-root AvatarView-avatar-9"
>
  <img
    className="MuiAvatar-img"
    src="https://www.gravatar.com/avatar/?d=mp"
  />
</div>
`;

exports[`Storyshots Avatar basic 1`] = `
<div
  className="MuiAvatar-root AvatarView-avatar-1"
>
  <img
    className="MuiAvatar-img"
    src="https://www.gravatar.com/avatar/09abd59eb5653a7183ba812b8261f48b?d=retro"
  />
</div>
`;

exports[`Storyshots Avatar using fallback 1`] = `
<div
  className="MuiAvatar-root AvatarView-avatar-5"
>
  <img
    className="MuiAvatar-img"
    src="https://www.gravatar.com/avatar/d77142dc7e7bda54b6d26a663771a63f?d=retro"
  />
</div>
`;

exports[`Storyshots EventItem anonymous 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
  disabled={false}
>
  <div
    className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
  >
    <div
      className="MuiAvatar-root AvatarView-avatar-81"
    >
      <img
        className="MuiAvatar-img"
        src="https://www.gravatar.com/avatar/?d=mp"
      />
    </div>
  </div>
  <div
    className="MuiListItemText-root MuiListItemText-multiline"
  >
    <span
      className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
    >
      <span
        className="MuiTypography-root makeStyles-truncate-67 MuiTypography-body2 MuiTypography-colorTextPrimary"
      >
        Anonymous
      </span>
      liked "Lorem Ipsum"
    </span>
    <p
      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
    >
      3/11/2019, 5:34:56 AM
    </p>
  </div>
</li>
`;

exports[`Storyshots EventItem basic 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
  disabled={false}
>
  <div
    className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
  >
    <div
      className="MuiAvatar-root AvatarView-avatar-27"
    >
      <img
        className="MuiAvatar-img"
        src="https://www.gravatar.com/avatar/09abd59eb5653a7183ba812b8261f48b?d=retro"
      />
    </div>
  </div>
  <div
    className="MuiListItemText-root MuiListItemText-multiline"
  >
    <span
      className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
    >
      <span
        className="MuiTypography-root makeStyles-truncate-13 MuiTypography-body2 MuiTypography-colorTextPrimary"
      >
        John Doe
      </span>
      modified post "Hello World"
    </span>
    <p
      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
    >
      3/11/2019, 5:34:56 AM
    </p>
  </div>
</li>
`;

exports[`Storyshots EventItem long event name 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
  disabled={false}
>
  <div
    className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
  >
    <div
      className="MuiAvatar-root AvatarView-avatar-135"
    >
      <img
        className="MuiAvatar-img"
        src="https://www.gravatar.com/avatar/d77142dc7e7bda54b6d26a663771a63f?d=retro"
      />
    </div>
  </div>
  <div
    className="MuiListItemText-root MuiListItemText-multiline"
  >
    <span
      className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
    >
      <span
        className="MuiTypography-root makeStyles-truncate-121 MuiTypography-body2 MuiTypography-colorTextPrimary"
      >
        Lela Feng
      </span>
      commented "I don't agree. You should never try to do things this way, or you'll end up in a bad place."
    </span>
    <p
      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
    >
      3/11/2019, 5:34:56 AM
    </p>
  </div>
</li>
`;

exports[`Storyshots EventList basic 1`] = `
<ul
  className="MuiList-root makeStyles-root-175 MuiList-padding"
>
  <li
    className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
    disabled={false}
  >
    <div
      className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
    >
      <div
        className="MuiAvatar-root AvatarView-avatar-195"
      >
        <img
          className="MuiAvatar-img"
          src="https://www.gravatar.com/avatar/09abd59eb5653a7183ba812b8261f48b?d=retro"
        />
      </div>
    </div>
    <div
      className="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
      >
        <span
          className="MuiTypography-root makeStyles-truncate-181 MuiTypography-body2 MuiTypography-colorTextPrimary"
        >
          John Doe
        </span>
        modified post "Hello World"
      </span>
      <p
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        1/10/2019, 9:15:56 AM
      </p>
    </div>
  </li>
  <li
    className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
    disabled={false}
  >
    <div
      className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
    >
      <div
        className="MuiAvatar-root AvatarView-avatar-195"
      >
        <img
          className="MuiAvatar-img"
          src="https://www.gravatar.com/avatar/09abd59eb5653a7183ba812b8261f48b?d=retro"
        />
      </div>
    </div>
    <div
      className="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
      >
        <span
          className="MuiTypography-root makeStyles-truncate-181 MuiTypography-body2 MuiTypography-colorTextPrimary"
        >
          John Doe
        </span>
        created new post "Hello World"
      </span>
      <p
        className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        1/10/2019, 12:54:00 AM
      </p>
    </div>
  </li>
</ul>
`;

exports[`Storyshots EventList empty 1`] = `
<ul
  className="MuiList-root makeStyles-root-235 MuiList-padding"
/>
`;

exports[`Storyshots Timeline empty 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-root-799 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root makeStyles-content-800"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root makeStyles-icon-801 MuiSvgIcon-colorPrimary"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <div>
      <h6
        className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
      >
        This page will show the actions of users once they start using the application.
      </h6>
      <h6
        className="MuiTypography-root MuiTypography-subtitle1"
      >
        You will even see your own actions recorded here. Try adding a new post by using the 
        "Posts"
         menu.
      </h6>
      <img
        alt=""
        className="makeStyles-image-802"
        src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Return_arrow.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Timeline loaded 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-root-675 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root makeStyles-content-676"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root makeStyles-icon-677 MuiSvgIcon-colorPrimary"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <div>
      <h6
        className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
      >
        This page will show the actions of users once they start using the application.
      </h6>
      <h6
        className="MuiTypography-root MuiTypography-subtitle1"
      >
        You will even see your own actions recorded here. Try adding a new post by using the 
        "Posts"
         menu.
      </h6>
      <img
        alt=""
        className="makeStyles-image-678"
        src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Return_arrow.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Timeline loading 1`] = `
<div
  className="TimelineLoadingView-root-587"
>
  <div>
    <div>
      <span
        className="Component-root-589"
      >
         
      </span>
      <div
        className="MuiPaper-root MuiPaper-elevation1 MuiCard-root TimelineLoadingView-card-588 MuiPaper-rounded"
      >
        <ul
          className="MuiList-root MuiList-padding"
        >
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div>
      <span
        className="Component-root-589"
      >
         
      </span>
      <div
        className="MuiPaper-root MuiPaper-elevation1 MuiCard-root TimelineLoadingView-card-588 MuiPaper-rounded"
      >
        <ul
          className="MuiList-root MuiList-padding"
        >
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-635"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-589"
                >
                   
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimelineEmpty basic 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-root-241 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root makeStyles-content-242"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root makeStyles-icon-243 MuiSvgIcon-colorPrimary"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <div>
      <h6
        className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
      >
        This page will show the actions of users once they start using the application.
      </h6>
      <h6
        className="MuiTypography-root MuiTypography-subtitle1"
      >
        You will even see your own actions recorded here. Try adding a new post by using the 
        "Posts"
         menu.
      </h6>
      <img
        alt=""
        className="makeStyles-image-244"
        src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Return_arrow.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots TimelineLoaded basic 1`] = `
<div
  className="makeStyles-root-313"
>
  <div
    className="makeStyles-day-314"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    >
      Thursday, January 10, 2019
    </h6>
    <ul
      className="MuiList-root makeStyles-root-345 MuiList-padding"
    >
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-365"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/09abd59eb5653a7183ba812b8261f48b?d=retro"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-351 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              John Doe
            </span>
            modified post "Hello World"
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/10/2019, 9:15:56 AM
          </p>
        </div>
      </li>
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-365"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/09abd59eb5653a7183ba812b8261f48b?d=retro"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-351 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              John Doe
            </span>
            created new post "Hello World"
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/10/2019, 8:34:00 AM
          </p>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="makeStyles-day-314"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    >
      Wednesday, January 9, 2019
    </h6>
    <ul
      className="MuiList-root makeStyles-root-345 MuiList-padding"
    >
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-365"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/d77142dc7e7bda54b6d26a663771a63f?d=retro"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-351 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              Lela Feng
            </span>
            commented "I don't agree. You should never try to do things this way, or you'll end up in a bad place."
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/9/2019, 7:53:56 AM
          </p>
        </div>
      </li>
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-365"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/fba359a749c1926b980c87c8723dc0ee?d=retro"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-351 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              Brandon Hood
            </span>
            deleted comment "Totally."
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/9/2019, 3:04:56 AM
          </p>
        </div>
      </li>
    </ul>
  </div>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-fullWidth"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Load more events
    </span>
  </button>
</div>
`;

exports[`Storyshots TimelineLoaded empty 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 MuiTypography-colorError"
>
  Error: This list should not be empty.
</p>
`;

exports[`Storyshots TimelineLoaded fully loaded 1`] = `
<div
  className="makeStyles-root-405"
>
  <div
    className="makeStyles-day-406"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    >
      Thursday, January 10, 2019
    </h6>
    <ul
      className="MuiList-root makeStyles-root-437 MuiList-padding"
    >
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-457"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/09abd59eb5653a7183ba812b8261f48b?d=retro"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-443 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              John Doe
            </span>
            modified post "Hello World"
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/10/2019, 9:15:56 AM
          </p>
        </div>
      </li>
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-457"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/09abd59eb5653a7183ba812b8261f48b?d=retro"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-443 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              John Doe
            </span>
            created new post "Hello World"
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/10/2019, 8:34:00 AM
          </p>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="makeStyles-day-406"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    >
      Wednesday, January 9, 2019
    </h6>
    <ul
      className="MuiList-root makeStyles-root-437 MuiList-padding"
    >
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-457"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/d77142dc7e7bda54b6d26a663771a63f?d=retro"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-443 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              Lela Feng
            </span>
            commented "I don't agree. You should never try to do things this way, or you'll end up in a bad place."
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/9/2019, 7:53:56 AM
          </p>
        </div>
      </li>
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-457"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/fba359a749c1926b980c87c8723dc0ee?d=retro"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-443 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              Brandon Hood
            </span>
            deleted comment "Totally."
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/9/2019, 3:04:56 AM
          </p>
        </div>
      </li>
      <li
        className="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
        disabled={false}
      >
        <div
          className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
        >
          <div
            className="MuiAvatar-root AvatarView-avatar-457"
          >
            <img
              className="MuiAvatar-img"
              src="https://www.gravatar.com/avatar/?d=mp"
            />
          </div>
        </div>
        <div
          className="MuiListItemText-root MuiListItemText-multiline"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
          >
            <span
              className="MuiTypography-root makeStyles-truncate-443 MuiTypography-body2 MuiTypography-colorTextPrimary"
            >
              Anonymous
            </span>
            liked "Lorem Ipsum"
          </span>
          <p
            className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
          >
            1/9/2019, 1:12:56 AM
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots TimelineLoading basic 1`] = `
<div
  className="TimelineLoadingView-root-499"
>
  <div>
    <div>
      <span
        className="Component-root-501"
      >
         
      </span>
      <div
        className="MuiPaper-root MuiPaper-elevation1 MuiCard-root TimelineLoadingView-card-500 MuiPaper-rounded"
      >
        <ul
          className="MuiList-root MuiList-padding"
        >
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div>
      <span
        className="Component-root-501"
      >
         
      </span>
      <div
        className="MuiPaper-root MuiPaper-elevation1 MuiCard-root TimelineLoadingView-card-500 MuiPaper-rounded"
      >
        <ul
          className="MuiList-root MuiList-padding"
        >
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemAvatar-root"
            >
              <div
                className="MuiAvatar-root AvatarView-avatar-547"
              >
                <img
                  className="MuiAvatar-img"
                  src="https://www.gravatar.com/avatar/?d=mp"
                />
              </div>
            </div>
            <div
              className="MuiListItemText-root MuiListItemText-multiline"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </span>
              <p
                className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
              >
                <span
                  className="Component-root-501"
                >
                   
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
